--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,24 @@
 	    <artifactId>commons-dbcp2</artifactId>
 	    <version>2.9.0</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+	<dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
+
+	<!-- JAXB RI -->
+    <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.4</version>
+    </dependency>
 
   </dependencies>
   
   
 </project>
+
+
