--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,41 @@
   <artifactId>computer-repair-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+         <maven.compiler.release>17</maven.compiler.release>
+  </properties> 
+  
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <!-- configure plugin options here -->
+                </configuration>	
+            </plugin>
+            
+            <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-jar-plugin</artifactId>
+	            <version>3.3.0</version>
+        	</plugin>
+         </plugins>
+  </build> 
+  
   <dependencies>
 	
 	<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
@@ -69,10 +104,7 @@
 	    <version>3.5.13</version>
 	</dependency>
 
-
-
   </dependencies>
-  
   
 </project>
 
