--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/computer_repair_service
+url=jdbc:mysql://18.197.182.199:3306/computer_repair_service
 username=root
-password=Q!W@E#r4t5y6
+password=devintern
